# kawasaki-2d-timescales

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-DATA  README.md  RELEASE.md  TASK-kawasaki-mpemba-boundary-v4.md  TASK-kawasaki-mpemba-review-v1.md  TASK-kawasaki-mpemba-review-v2.md  codemeta.json  pyproject.toml
.github/workflows/: ci.yml
configs/: coarsening_m3.yaml  grid_m6.yaml  milestone1_static.yaml  milestone5_primary.yaml  preregistration_m5.yaml  review_gpt5_m5_verdict_20260624.yaml  review_gpt5_spectral_repro_20260624.yaml  review_kimi_m5_N064.yaml  review_kimi_spectral.yaml  single_quench.yaml  spectral_probe.yaml  temperature_sweep_m4.yaml
docs/: output_schema.md  physics.md
logbook/: 2026-06-23-foundation.md  2026-06-23-milestone2.md  2026-06-23-milestone3.md  2026-06-23-milestone4.md  2026-06-23-milestone5-amendment.md  2026-06-23-milestone5.md  2026-06-24-review-response-2.md  2026-06-24-review-response.md  2026-06-24-spectral-probe.md  2026-06-25-milestone6-grid.md
results/m1_static_v1/: config.yaml  manifest.json  static_observables.csv
results/m2_single_quench_v1/: Skt_k.npy  (+14 more)
reviews/: 2026-06-24-codex.md  2026-06-24-gpt5-codex-v2.md  2026-06-24-kimi-v2.md  2026-06-24-kimi.md  README.md
scripts/: m5_offset_sensitivity.py  milestone1_static.py  milestone2_single_quench.py  milestone3_coarsening.py  milestone4_temperature_sweep.py  milestone5_crossing.py  milestone6_grid.py  milestone_spectral.py
tests/: test_analysis.py  test_conservation.py  test_detailed_balance.py  test_energy.py  test_equilibration.py  test_observables.py  test_protocols_io.py  test_reproducibility.py  test_spectral.py
(+228 files in other folders)
