[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kawasaki2d"
version = "0.1.0"
description = "Reproducible 2D Kawasaki-Ising coarsening demonstrator and operational boundary test for the Mpemba effect under conserved dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kawasaki-2D contributors" }]
keywords = [
    "Ising model",
    "Kawasaki dynamics",
    "conserved order parameter",
    "phase separation",
    "coarsening",
    "Mpemba effect",
    "Monte Carlo",
    "nonequilibrium relaxation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Optional JIT acceleration for the inner kinetic loop. The package runs
# correctly without it (pure-NumPy/Python fallback); Numba only changes speed.
accel = ["numba>=0.59"]
plot = ["matplotlib>=3.7"]
analysis = ["pandas>=2.0", "pyarrow>=12.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
kawasaki-run = "kawasaki2d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "slow: marks tests that run longer Monte Carlo chains (deselect with '-m \"not slow\"')",
]
